# safety-gymnasium

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  safety_gym_bug_report.md  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  questions.yml
.github/workflows/: ci.yml  tests.yml
benchmarks/: README.md
docs/: conf.py  index.md  index.rst  make.bat  requirements.txt  safety_gym_bug_report.md  spelling_wordlist.txt
docs/api/: bases.md  builder.md  utils.md
docs/api/bases/: base_agent.md  base_object.md  base_task.md  underlying.md
docs/api/utils/: random_generator.md
docs/components_of_environments/: agents.md  agents.rst  objects.md  objects.rst  tasks.md  tasks.rst
docs/components_of_environments/agents/: ant.md  ant.rst  car.md  car.rst  doggo.rst  freight_franka.rst  point.md  point.rst  racecar.md  racecar.rst  shadowhands.rst
docs/components_of_environments/objects/: free_geom.md  free_geom.rst  geom.md  geom.rst  mocap.md  mocap.rst
docs/components_of_environments/tasks/: task_example.md  task_example.rst
docs/environments/: safe_isaac_gym.rst  safe_multi_agent.rst  safe_navigation.md  safe_navigation.rst  safe_velocity.rst  safe_vision.rst
docs/environments/safe_isaac_gym/: freight_franka_close_drawer.rst  freight_franka_pick_and_place.rst  shadowhand_catch_over2_underarm_safe_finger.rst  shadowhand_catch_over2_underarm_safe_joint.rst  shadowhand_over_safe_finger.rst  shadowhand_over_safe_joint.rst
docs/environments/safe_multi_agent/: freight_franka_close_drawer.rst  freight_franka_pick_and_place.rst  multi_goal.rst  shadowhand_catch_over2_underarm_safe_finger.rst  shadowhand_catch_over2_underarm_safe_joint.rst  shadowhand_over_safe_finger.rst  shadowhand_over_safe_joint.rst  velocity.rst
docs/environments/safe_navigation/: button.md  button.rst  circle.md  circle.rst  goal.md  goal.rst  push.md  push.rst
docs/environments/safe_vision/: building_button.rst  building_goal.rst  building_push.rst  fading_easy.rst  fading_hard.rst  formula_one.rst  race.rst
docs/introduction/: about_safety_gymnasium.md  about_safety_gymnasium.rst  basic_usage.md  basic_usage.rst
examples/: env.py  env_from_config.py  multi_agent_env.py  multi_goal.py  vision_env.py
safety_gymnasium/: __init__.py  builder.py  version.py  world.py
safety_gymnasium/agents/: __init__.py  ant.py  car.py  doggo.py  point.py  racecar.py
safety_gymnasium/assets/: __init__.py  color.py  group.py  robot.py
safety_gymnasium/assets/free_geoms/: __init__.py  push_box.py  vases.py
safety_gymnasium/assets/geoms/: __init__.py  apple.py  apples.py  button.py  buttons.py  circle.py  goal.py  hazard.py  hazards.py  orange.py  oranges.py  pillar.py  pillars.py  sigwalls.py  staged_goal.py  walls.py
safety_gymnasium/assets/meshes/: racing_track.stl
safety_gymnasium/assets/mocaps/: __init__.py  gremlin.py  gremlins.py
safety_gymnasium/assets/objects/: __init__.py  push_box.py  vase.py
safety_gymnasium/assets/xmls/: ant.xml  car.xml  doggo.xml  point.xml  racecar.xml
safety_gymnasium/bases/: __init__.py  base_agent.py  base_object.py  base_obstacle.py  base_task.py  underlying.py
safety_gymnasium/configs/: assets.yaml  building_button.yaml  formula_one.yaml  race.yaml
safety_gymnasium/tasks/: __init__.py
safety_gymnasium/tasks/button/: __init__.py  button_level0.py  button_level1.py  button_level2.py
safety_gymnasium/tasks/circle/: __init__.py  circle_level0.py  circle_level1.py  circle_level2.py
safety_gymnasium/tasks/fading/: __init__.py  fading_level0.py  fading_level1.py  fading_level2.py
safety_gymnasium/tasks/goal/: __init__.py  goal_level0.py  goal_level1.py  goal_level2.py
safety_gymnasium/tasks/masafe/: __init__.py  coupled_half_cheetah.py  env_wrappers.py  manyagent_ant.py  manyagent_swimmer.py  mujoco_multi.py  multiagentenv.py  obsk.py  run_env.py  test_env.py
safety_gymnasium/tasks/multiagent_mujoco/: __init__.py  coupled_half_cheetah.py  mamujoco_v0.py  many_segment_ant.py  many_segment_swimmer.py  mujoco_multi.py  obsk.py
safety_gymnasium/tasks/push/: __init__.py  push_level0.py  push_level1.py  push_level2.py
safety_gymnasium/tasks/race/: __init__.py  race_level0.py  race_level1.py  race_level2.py
safety_gymnasium/tasks/run/: __init__.py  run.py
safety_gymnasium/tasks/safe_issac_gym/assets/urdf/allegro_hand_model/: CMakeLists.txt  package.xml
safety_gymnasium/tasks/safe_issac_gym/assets/urdf/xarm_description/: CMakeLists.txt  package.xml  readme.md
safety_gymnasium/tasks/safe_issac_gym/assets/urdf/xarm_description/allegro_hand_model/: README.md
safety_gymnasium/tasks/safe_issac_gym/assets/urdf/xarm_description/launch/: xarm5_rviz_display.launch  xarm5_upload.launch
safety_gymnasium/tasks/safe_issac_gym/assets/urdf/xarm_description/urdf/: xarm5.urdf.xacro  xarm6 (copy).urdf  xarm6.urdf  xarm6.urdf.xacro  xarm7.urdf.xacro
safety_gymnasium/tasks/safe_multi_agent/: __init__.py  builder.py  safe_mujoco_multi.py  world.py
safety_gymnasium/tasks/safe_velocity/: __init__.py  safety_ant_velocity_v0.py  safety_ant_velocity_v1.py  safety_half_cheetah_velocity_v0.py  safety_half_cheetah_velocity_v1.py  safety_hopper_velocity_v0.py  safety_hopper_velocity_v1.py  safety_humanoid_velocity_v0.py  (+5 more)
safety_gymnasium/utils/: __init__.py  common_utils.py  keyboard_viewer.py  passive_env_checker.py  random_generator.py  registration.py  task_utils.py
safety_gymnasium/vector/: __init__.py  async_vector_env.py  sync_vector_env.py
safety_gymnasium/wrappers/: __init__.py  autoreset.py  env_checker.py  gymnasium_conversation.py  gymnasium_conversion.py  normalize.py  rescale_action.py  time_limit.py  unsqueeze.py
tests/: .coveragerc  helpers.py  requirements.txt  test_MaMuJoCo.py  test_config_env.py  test_deepcopy.py  test_env.py  test_gymnasium_env.py  test_safe_multi_agent.py  test_vision_env.py
(+468 files in other folders)
