<!--
 Copyright 2023 OmniSafe Team. All Rights Reserved.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<package>
  <name>allegro_hand_model</name>
  <version>0.5.0</version>

  <description>This package contains allegro hand urdf.</description>
  <author email="jean.cho@wonik.com">jean!!</author>

  <maintainer email="jean.cho@wonik.com">jean!!</maintainer>

  <license>wonik</license>
  <url>http://wiki.wonikrobotics.com/AllegroHandWiki/index.php/Allegro_Hand</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>
