<?xml version="1.0"?>
<!--
 Copyright 2023 OmniSafe Team. All Rights Reserved.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<package format="2">
  <name>xarm_description</name>
  <version>0.1.0</version>
  <description> The xarm_description package </description>

  <author email="jimy92@163.com">Jimy Zhang</author>
  <maintainer email="jason@ufactory.cc">Jason Peng</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/xarm_description</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
